Définition des domaines dans la config

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,10 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Europe/Paris
-APP_URL=http://team-lan.test
+
+DOMAIN_NAME=team-lan.test
+HUB_SUBDOMAIN_NAME=hub
+APP_URL=http://${DOMAIN_NAME}
 
 APP_LOCALE=fr
 APP_FALLBACK_LOCALE=en
