Ajout provider Discord

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,9 @@ CACHE_PREFIX=
 MAIL_MAILER=null
 
 VITE_APP_NAME="${APP_NAME}"
+
+TELESCOPE_ENABLED=true
+
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_REDIRECT_URI=http://${HUB_SUBDOMAIN_NAME}.${DOMAIN_NAME}/connexion/callback
