Ajout variables pour Discord

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,7 @@ TELESCOPE_ENABLED=true
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 DISCORD_REDIRECT_URI=http://${HUB_SUBDOMAIN_NAME}.${DOMAIN_NAME}/connexion/callback
+DISCORD_API_BOT_TOKEN=
+DISCORD_APPLICATION_ID=${DISCORD_CLIENT_ID}
+DISCORD_PUBLIC_KEY=
+DISCORD_COMPONENT_INTERACTION_DEFAULT_BEHAVIOR=load
