--- a/.env.example
+++ b/.env.example
@@ -49,10 +49,13 @@ VITE_APP_NAME="${APP_NAME}"
 
 TELESCOPE_ENABLED=true
 
-DISCORD_CLIENT_ID=
+DISCORD_APPLICATION_ID=
 DISCORD_CLIENT_SECRET=
 DISCORD_REDIRECT_URI=http://${HUB_SUBDOMAIN_NAME}.${DOMAIN_NAME}/connexion/callback
 DISCORD_API_BOT_TOKEN=
-DISCORD_APPLICATION_ID=${DISCORD_CLIENT_ID}
 DISCORD_PUBLIC_KEY=
 DISCORD_COMPONENT_INTERACTION_DEFAULT_BEHAVIOR=load
+DISCORD_GUILD_ID=
+DISCORD_MEMBER_ROLE_ID=
+DISCORD_LAN_PARTICIPANT_ROLE_ID=
+DISCORD_ADMIN_ROLE_ID=
