--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,6 @@ APP_DEBUG=true
 APP_TIMEZONE=Europe/Paris
 
 DOMAIN_NAME=team-lan.test
-HUB_SUBDOMAIN_NAME=hub
 APP_URL=http://${DOMAIN_NAME}
 
 APP_LOCALE=fr
@@ -51,7 +50,7 @@ TELESCOPE_ENABLED=true
 
 DISCORD_APPLICATION_ID=
 DISCORD_CLIENT_SECRET=
-DISCORD_REDIRECT_URI=http://${HUB_SUBDOMAIN_NAME}.${DOMAIN_NAME}/connexion/callback
+DISCORD_REDIRECT_URI=http://hub.${DOMAIN_NAME}/connexion/callback
 DISCORD_API_BOT_TOKEN=
 DISCORD_PUBLIC_KEY=
 DISCORD_COMPONENT_INTERACTION_DEFAULT_BEHAVIOR=load
