--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ DB_DATABASE=laravel
 DB_USERNAME=sail
 DB_PASSWORD=password
 
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
