--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
+        "sass-embedded": "^1.83.0",
         "vite": "^5.0"
     },
     "dependencies": {
