--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
         "nwilging/laravel-discord-bot": "^1.1",
-        "socialiteproviders/discord": "^4.2"
+        "socialiteproviders/discord": "^4.2",
+        "spatie/laravel-sitemap": "^7.3",
+        "verschuur/laravel-robotstxt": "^5.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
