--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "laravel/tinker": "^2.9",
         "nwilging/laravel-discord-bot": "^1.1",
         "socialiteproviders/discord": "^4.2",
-        "spatie/laravel-sitemap": "^7.3",
-        "verschuur/laravel-robotstxt": "^5.1"
+        "spatie/laravel-sitemap": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
