--- a/.env.example
+++ b/.env.example
@@ -40,9 +40,15 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=null
 
 CACHE_STORE=file
-CACHE_PREFIX=
 
-MAIL_MAILER=null
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="contact@${APP_DOMAIN}"
+MAIL_FROM_NAME="${APP_NAME}"
 
 VITE_APP_NAME="${APP_NAME}"
 
@@ -55,6 +61,6 @@ DISCORD_API_BOT_TOKEN=
 DISCORD_PUBLIC_KEY=
 DISCORD_COMPONENT_INTERACTION_DEFAULT_BEHAVIOR=load
 DISCORD_GUILD_ID=
-DISCORD_MEMBER_ROLE_ID=
-DISCORD_LAN_PARTICIPANT_ROLE_ID=
-DISCORD_ADMIN_ROLE_ID=
+DISCORD_ROLES_ID_MEMBER=
+DISCORD_ROLES_ID_LAN_PARTICIPANT=
+DISCORD_ROLES_ID_ADMIN=
