Ajout sentry ; suppression sitemap ; ajout variables d'env

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,18 @@ DISCORD_GUILD_ID=
 DISCORD_ROLES_ID_MEMBER=
 DISCORD_ROLES_ID_LAN_PARTICIPANT=
 DISCORD_ROLES_ID_ADMIN=
+DISCORD_CHANNELS_ID_LAN=
+DISCORD_CHANNELS_ID_PUBG_=
+
+ALWAYSDATA_API_TOKEN=
+ALWAYSDATA_ACCOUNT_NAME=
+ALWAYSDATA_SITE_ID=
+
+SENTRY_LARAVEL_DSN=null
+SENTRY_SEND_DEFAULT_PII=true
+
+STEAM_API_KEY=
+
+PUBG_API_JWT_TOKEN=
+PUBG_PLAYER_NAMES_INTERNAL=
+PUBG_PLAYER_NAMES_EXTERNAL=
