--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-dom": "*",
         "artesaos/seotools": "^1.3",
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
         "nwilging/laravel-discord-bot": "^1.1",
-        "socialiteproviders/discord": "^4.2",
-        "spatie/laravel-sitemap": "^7.3",
-        "ext-dom": "*"
+        "sentry/sentry-laravel": "^4.10",
+        "socialiteproviders/discord": "^4.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
