--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_TIMEZONE_DISPLAY=Europe/Paris
 
 APP_DOMAIN=team-lan.test
-APP_URL=http://${APP_DOMAIN}
+APP_URL="http://${APP_DOMAIN}"
 
 APP_LOCALE=fr
 APP_FALLBACK_LOCALE=en
@@ -56,7 +56,7 @@ TELESCOPE_ENABLED=true
 
 DISCORD_APPLICATION_ID=
 DISCORD_CLIENT_SECRET=
-DISCORD_REDIRECT_URI=http://hub.${APP_DOMAIN}/connexion/callback
+DISCORD_REDIRECT_URI="http://hub.${APP_DOMAIN}/connexion/callback"
 DISCORD_API_BOT_TOKEN=
 DISCORD_PUBLIC_KEY=
 DISCORD_COMPONENT_INTERACTION_DEFAULT_BEHAVIOR=load
