--- a/.env.example
+++ b/.env.example
@@ -76,6 +76,6 @@ SENTRY_SEND_DEFAULT_PII=true
 
 STEAM_API_KEY=
 
-PUBG_API_JWT_TOKEN=
+PUBG_API_TOKEN=
 PUBG_PLAYER_NAMES_INTERNAL=
 PUBG_PLAYER_NAMES_EXTERNAL=
