--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.9",
         "nwilging/laravel-discord-bot": "^1.1",
         "sentry/sentry-laravel": "^4.10",
-        "socialiteproviders/discord": "^4.2"
+        "socialiteproviders/discord": "^4.2",
+        "spatie/laravel-flash": "^1.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
