--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
+        "league/csv": "^9.18.0",
         "nwilging/laravel-discord-bot": "^1.1",
         "overtrue/laravel-vote": "^3.2",
         "sentry/sentry-laravel": "^4.10",
