--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "overtrue/laravel-vote": "^3.2",
         "sentry/sentry-laravel": "^4.10",
         "socialiteproviders/discord": "^4.2",
-        "spatie/laravel-flash": "^1.10"
+        "spatie/laravel-flash": "^1.10",
+        "spatie/laravel-settings": "^3.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
