Ajout rôle orga lan

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,7 @@ DISCORD_COMPONENT_INTERACTION_DEFAULT_BEHAVIOR=load
 DISCORD_GUILD_ID=
 DISCORD_ROLES_ID_MEMBER=
 DISCORD_ROLES_ID_LAN_PARTICIPANT=
+DISCORD_ROLES_ID_LAN_ORGANIZER=
 DISCORD_ROLES_ID_ADMIN=
 DISCORD_CHANNELS_ID_LAN=
 DISCORD_CHANNELS_ID_PUBG=
