MàJ noms conteneurs Docker

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_DISPLAY_TIMEZONE=Europe/Paris
 
 APP_DOMAIN=team-lan.test
+APP_SERVICE=${APP_DOMAIN}
 APP_URL="http://${APP_DOMAIN}"
 
 APP_LOCALE=fr
